--- a/data_sources/focus_ios/index.html
+++ b/data_sources/focus_ios/index.html
@@ -1957,8 +1957,8 @@
 
 <hr />
 <h3 id="mobile_search_clients_engines_sources_daily"><a href="#mobile_search_clients_engines_sources_daily">mobile_search_clients_engines_sources_daily</a></h3>
-<p>Client ID column: <code>None</code></p>
-<p>Submission Date column: <code>None</code></p>
+<p>Client ID column: <code>client_id</code></p>
+<p>Submission Date column: <code>DATE(submission_date)</code></p>
 <details>
 <summary>Definition:</summary>
 
