--- a/default_configs/focus_android/index.html
+++ b/default_configs/focus_android/index.html
@@ -1859,7 +1859,7 @@
 <p><a href="https://github.com/mozilla/metric-hub/blob/main/defaults/focus_android.toml">Source</a>  |  <a href="https://github.com/mozilla/metric-hub/edit/main/defaults/focus_android.toml">Edit</a></p>
 <h3 id="metrics">Metrics</h3>
 <h4 id="retained"><code>retained</code></h4>
-<p>Analysis Periods:  <code>daily</code> ,   <code>weekly</code>  </p>
+<p>Analysis Periods:  <code>weekly</code> ,   <code>daily</code>  </p>
 <p>Data Source: <a href="#baseline"><code>baseline</code></a></p>
 <p>Statistics: <code>binomial</code></p>
 <details>
@@ -1875,7 +1875,7 @@
 <h4 id="serp_ad_clicks"><code>serp_ad_clicks</code></h4>
 <p><strong>Ad Clicks</strong></p>
 <p>Number of ad clicks on a search engine results page.</p>
-<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
+<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
 <p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
@@ -1891,7 +1891,7 @@
 <h4 id="search_count"><code>search_count</code></h4>
 <p><strong>SAP search count</strong></p>
 <p>Number of searches performed through a Search Access Point.</p>
-<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
+<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
 <p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
@@ -1907,7 +1907,7 @@
 <h4 id="days_of_use"><code>days_of_use</code></h4>
 <p><strong>Days of use</strong></p>
 <p>The number of days in an observation window that clients used the browser.</p>
-<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
+<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
 <p>Data Source: <a href="#baseline"><code>baseline</code></a></p>
 <p>Statistics: <code>empirical_cdf</code>, <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
@@ -1921,7 +1921,7 @@
 
 <hr />
 <h4 id="active_hours"><code>active_hours</code></h4>
-<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
+<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
 <p>Data Source: <a href="#baseline"><code>baseline</code></a></p>
 <p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
