--- a/default_configs/focus_ios/index.html
+++ b/default_configs/focus_ios/index.html
@@ -1831,7 +1831,7 @@
 <p><a href="https://github.com/mozilla/metric-hub/blob/main/defaults/focus_ios.toml">Source</a>  |  <a href="https://github.com/mozilla/metric-hub/edit/main/defaults/focus_ios.toml">Edit</a></p>
 <h3 id="metrics">Metrics</h3>
 <h4 id="retained"><code>retained</code></h4>
-<p>Analysis Periods:  <code>daily</code> ,   <code>weekly</code>  </p>
+<p>Analysis Periods:  <code>weekly</code> ,   <code>daily</code>  </p>
 <p>Data Source: <a href="#baseline"><code>baseline</code></a></p>
 <p>Statistics: <code>binomial</code></p>
 <details>
@@ -1849,7 +1849,7 @@
 <p>The number of days in an observation window that clients used the browser.</p>
 <p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
 <p>Data Source: <a href="#baseline"><code>baseline</code></a></p>
-<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code>, <code>empirical_cdf</code></p>
+<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code>, <code>empirical_cdf</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -1865,7 +1865,7 @@
 <p>Total time Firefox was active</p>
 <p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
 <p>Data Source: <a href="#baseline"><code>baseline</code></a></p>
-<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
+<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
 <details>
 <summary>Definition:</summary>
 
